--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,4 +1,16 @@
 ---
-title: Introduction
-description: 'Welcome to Lula Convenience customer API documentation.'
+title: Get Started
+description: 'Lula Convenience API documentation.'
 ---
+
+## Welcome to Lula's Customer API Documentation
+You'll find the docs and APIs required to integrate directly with the Lula Platform. Lula helps convenience stores and chains earn more by enabling delivery. 
+
+The Inventory APIs enable automated updating of your stores' inventory on a regular cadence. Using this seamless integration you can:
+* Add, remove, or edit any item you wish to list on the delivery marketplaces
+* Keep item prices up-to-date
+* Update item quantities
+* and more...
+
+### Support
+If you require any support, do not hesitate to contact support@luladelivery.com
