--- a/api-reference/endpoint/uploadCSV.mdx
+++ b/api-reference/endpoint/uploadCSV.mdx
@@ -58,6 +58,10 @@ All items will be validated using our validation rules. Only items that pass all
             - Wine
             - Wing Bites
             - Wings
+            - Hot Foods
+            - Automotive
+            - Fountain
+            - Tobacco
         </Accordion>
     </ResponseField>
 
