--- a/api-reference/csvItemsIngestion.mdx
+++ b/api-reference/csvItemsIngestion.mdx
@@ -22,10 +22,7 @@ Here are the accepted and required CSV fields:
 | location | where to find item in store |  |
 | active | 1 = active, 0 = inactive, use to hide/show the product | * |
 
----
-title: "Lula Sample CSV"
-url: "https://lula-brand.s3.amazonaws.com/Lula_Sample_CSV.csv"
----
+### [Get the Lula Sample CSV](https://lula-brand.s3.amazonaws.com/Lula_Sample_CSV.csv)
 
 ## Categories List
 List of all categories and the order with which they are presented on the marketplace. If a category is not used it will not appear. Note, Tobacco products are restricted from the delivery marketplaces.
