fix: maximum allowed description length

--- a/api-reference/endpoint/postItemsForIngestion.mdx
+++ b/api-reference/endpoint/postItemsForIngestion.mdx
@@ -103,7 +103,7 @@ All items will be validated using our validation rules. Only items that pass all
     <ResponseField name="description" type="string">
         Product description. Example: "Soda. Pop. Soft drink. Sparkling beverage. Whatever you call it, nothing compares to the refreshing, crisp taste of Coca-Cola Original Taste"
 
-        <Warning>Minimum allowed description length: 350 characters</Warning>
+        <Warning>Maximum allowed description length: 350 characters</Warning>
     </ResponseField>
 
     <ResponseField name="brand" type="string">
