Documentation edits made through Mintlify web editor

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Get Started
-description: 'Lula Convenience API documentation.'
+description: 'Lula Commerce API documentation.'
 ---
 
 ## Welcome to Lula's Customer API Documentation
