--- a/api-reference/endpoint/postBulkCsv.mdx
+++ b/api-reference/endpoint/postBulkCsv.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Bulk Create or Upsert Products from CSV"
-api: "POST /inventory-service-v2/companies/:companyId/products/bulk/csv"
+api: "POST /companies/:companyId/products/bulk/csv"
 description: "Upload a CSV file to create or update multiple products for a company in a single request."
 ---
 
@@ -8,13 +8,17 @@ Creates or updates multiple products for the specified company by uploading a CS
 
 ### Endpoint
 
-`POST /inventory-service-v2/companies/:companyId/products/bulk/csv`
+`POST /companies/:companyId/products/bulk/csv`
+
+---
 
 ### Path Parameters
 
 <ParamField path="companyId" type="string" required>
   The unique identifier of the company.
 </ParamField>
+
+---
 
 ### Request Body
 
@@ -24,6 +28,8 @@ Creates or updates multiple products for the specified company by uploading a CS
     CSV file is required. If not provided, a 400 Bad Request is returned.
   </Warning>
 </ParamField>
+
+---
 
 ### CSV Columns
 
@@ -42,14 +48,16 @@ The CSV file should contain columns matching the following fields:
 - `location` (string, optional): Product location.
 - `unit_count` (string, required): Product unit count.
 
+---
+
 ### Example CSV
 
 <Snippet>
   external_id,upc,name,size,quantity,price,description,image_url,category,brand,location,unit_count
-  1234_5678,49000012521,Coca Cola Classic,12 oz,99,265,Classic Coca Cola in a
-  can.,https://go-upc.s3.amazonaws.com/images/68916944.jpeg,Soda,Coca
-  Cola,Counter,12 Pack 9876_5432,49000012522,Pepsi,12 oz,50,250,Classic Pepsi in
-  a
-  can.,https://go-upc.s3.amazonaws.com/images/68916945.jpeg,Soda,Pepsi,Fridge,12
+  1234_5678,49000012521,Coca Cola Classic,12 oz,99,265,"Classic Coca Cola in a
+  can.","https://go-upc.s3.amazonaws.com/images/68916944.jpeg",Soda,Coca
+  Cola,Counter,12 Pack 9876_5432,49000012522,Pepsi,12 oz,50,250,"Classic Pepsi
+  in a
+  can.","https://go-upc.s3.amazonaws.com/images/68916945.jpeg",Soda,Pepsi,Fridge,12
   Pack
 </Snippet>
