--- a/api-reference/endpoint/upsert-products-csv.mdx
+++ b/api-reference/endpoint/upsert-products-csv.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Bulk Create or Upsert Products from CSV"
+title: "Upsert Products Using CSV"
 api: "POST /companies/:companyId/products/bulk/csv"
 description: "Upload a CSV file to create or update multiple products for a company in a single request."
 ---
