--- a/api-reference/stores/create-store.mdx
+++ b/api-reference/stores/create-store.mdx
@@ -13,7 +13,7 @@ This endpoint creates a new store with all necessary business information includ
     </ResponseField>
 
     <ResponseField name="email" type="string" required>
-        Store contact email address. Example: "salmansaeedpaul.esketchers@gmail.com"
+        Store contact email address. Example: "test.store@example.com"
     </ResponseField>
 
     <ResponseField name="phone_number" type="string" required>
@@ -29,19 +29,19 @@ This endpoint creates a new store with all necessary business information includ
         
         <Expandable title="Address Object">
             <ResponseField name="line_1" type="string" required>
-                Primary address line. Example: "39 Block Q Phase 2 Johar Town"
+                Primary address line. Example: "123 Main Street"
             </ResponseField>
             
             <ResponseField name="city" type="string" required>
-                City name. Example: "Lahore"
+                City name. Example: "Philadelphia"
             </ResponseField>
             
             <ResponseField name="state" type="string" required>
-                State or province. Example: "Punjab"
+                State or province. Example: "PA"
             </ResponseField>
             
             <ResponseField name="zip" type="string" required>
-                ZIP or postal code. Example: "54782"
+                ZIP or postal code. Example: "19104"
             </ResponseField>
             
             <ResponseField name="address_type" type="number" required>
@@ -66,15 +66,15 @@ This endpoint creates a new store with all necessary business information includ
 ```json
 {
     "name": "SSP Test Store - final",
-    "email": "salmansaeedpaul.esketchers@gmail.com",
+    "email": "test.store@example.com",
     "phone_number": "+14132231249",
     "company_id": 1000022,
     "addresses": [
         {
-            "line_1": "39 Block Q Phase 2 Johar Town",
-            "city": "Lahore",
-            "state": "Punjab",
-            "zip": "54782",
+            "line_1": "123 Main Street",
+            "city": "Philadelphia",
+            "state": "PA",
+            "zip": "19104",
             "address_type": 0
         },
         {
@@ -153,7 +153,7 @@ This endpoint creates a new store with all necessary business information includ
     "is_disabled": false,
     "is_rbac_store": false,
     "name": "SSP Test Store - final",
-    "email": "salmansaeedpaul.esketchers@gmail.com",
+    "email": "test.store@example.com",
     "phone_number": "+14132231249",
     "company_id": "1000022",
     "point_of_contact": "1000049",
@@ -165,10 +165,10 @@ This endpoint creates a new store with all necessary business information includ
             "id": "f2641a24-c946-4421-9c95-107ecaa8b7af",
             "address": {
                 "id": "8e48af24-7b57-4786-99f0-17a6a326cefc",
-                "line_1": "39 Block Q Phase 2 Johar Town",
-                "city": "Lahore",
-                "state": "Punjab",
-                "zip": "54782"
+                "line_1": "123 Main Street",
+                "city": "Philadelphia",
+                "state": "PA",
+                "zip": "19104"
             },
             "address_type": {
                 "description": "Store Address",
